<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:paddingStart="10sp"
    android:paddingLeft="10sp"
    android:paddingEnd="10sp"
    android:paddingBottom="10sp">

    <TextView
        android:id="@+id/txtInicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_main"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:textSize="30sp"/>

    <TextView
        android:id="@+id/txtIntro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_intro"
        android:textSize="20sp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:paddingTop="20sp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/btnIrMaps"
                    android:layout_width="160dp"
                    android:layout_height="140dp"
                    android:background="@drawable/obelisco"
                    android:onClick="irMapas"
                    android:layout_marginRight="20sp"
                    android:layout_marginEnd="20sp"/>

                <TextView
                    android:id="@+id/txtMapa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_mapa"
                    android:textSize="15sp"
                    android:layout_gravity="center"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/btnIrMaps2"
                    android:layout_width="160dp"
                    android:layout_height="140dp"
                    android:background="@drawable/costanerasur"
                    android:onClick="irMapas2"/>

                <TextView
                    android:id="@+id/txtMapa2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_mapa2"
                    android:textSize="15sp"
                    android:layout_gravity="center"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="20sp"
            android:layout_gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/btnIrMaps3"
                    android:layout_width="160dp"
                    android:layout_height="140dp"
                    android:background="@drawable/monumental"
                    android:onClick="irMapas3"
                    android:layout_marginRight="20sp"
                    android:layout_marginEnd="20sp" />

                <TextView
                    android:id="@+id/txtMapa3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_mapa3"
                    android:textSize="15sp"
                    android:layout_gravity="center"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/btnIrMaps4"
                    android:layout_width="160dp"
                    android:layout_height="140dp"
                    android:background="@drawable/bombonera"
                    android:onClick="irMapas4"
                    />

                <TextView
                    android:id="@+id/txtMapa4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_mapa4"
                    android:textSize="15sp"
                    android:layout_gravity="center"/>

            </LinearLayout>


        </LinearLayout>

</LinearLayout>